redo of publication styling to avoid text wrap

--- a/stylesheets/luther2010/reason.css
+++ b/stylesheets/luther2010/reason.css
@@ -94,8 +94,20 @@ body#home ul.pubLinks, body#primaryLRC ul.pubLinks {
   width:140px;
   display:block;
   float:left;
-  /*margin-top:5px;*/
+  margin-top:5px;
   margin-left:0;
+}
+#meat #content .publication ul.posts li.post .date,
+#meat #content .relatedPub ul.posts li.post .date{
+  display: none;
+}
+#meat #content .publication ul.posts li.post h4.title,
+#meat #content .publication ul.posts li.post .desc,
+#meat #content .relatedPub ul.posts li.post h4,
+#meat #content .relatedPub ul.posts li.post .desc {
+  margin-top: 0;
+  width:312px;
+  float: right;
 }
 
 .style-home-01 #meat #content .relatedPub h3 {
